# wordguess

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  _env  manage.py  pyproject.toml  pytest.ini
guessapp/: apps.py  guesser.py  importer.py  models.py  tests.py  urls.py  views.py
guessapp/management/commands/: import_wordlist.py  testread.py
guessapp/migrations/: 0001_initial.py
guessapp/templates/guessapp/: base.html  index.html
wordguess/: asgi.py  settings.py  urls.py  wsgi.py
