[tool.poetry]
name = "wordguess"
version = "0.1.0"
description = "An interactive web application to solve word puzzles like Wordle."
authors = ["Martin Wilsdorf <de.marwils@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
